--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@
 .App-header {
   background-image: url('../public/banner.jpg'); /* Set the background image */
   background-size: cover; /* Cover the entire element */
-  min-height: 65vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(50px + 2vmin);
   color: white;
 }
 
@@ -38,10 +38,10 @@
   }
 }
 
-/* Styles for the main content */
-.main-content {
-  padding: 2rem;
-  background-color: #f4f4f4;
-  min-height: 28vh;
+.logo {
+  width: 150px; 
+  height: 150px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
